Fix bugs in 'scope' and write tokens
I fixed all compile-time bugs and resolved all grammar conflicts.
However, I have a runtime segfault. Not too surprising considering all
the untested wiring I have in the lookup functions. I'll fix this in the
next commit.

When debugging, it is extremely useful to be able to print the tokens.
But relying on adhoc printf statements is ugly. I've added a macro for
printing tokens and their values, while preserving whitespace.

For a piece of code like:

```
x = 0

scope A {
    x = 1
    y = 42
    scope B {
        x = 2
    }
}
```

It will automatically write the following to a `tok.log` file:

```
IDENTIFIER:x =  INT:0

SCOPE  VARIABLE:A  {
    IDENTIFIER:x =  INT:1
    IDENTIFIER:y =  INT:42
    SCOPE  VARIABLE:B  {
        IDENTIFIER:x =  INT:2
    }
}
```

--- a/scope/Makefile
+++ b/scope/Makefile
@@ -1,5 +1,6 @@
 TARGET=scope
 CC=gcc
+XXFLAGS=-Wall
 
 SRC_BISON=${TARGET}.y
 SRC_LEXER=${TARGET}.l
@@ -9,16 +10,13 @@ H_LEXER=lex.yy.h
 C_PARSER=${TARGET}.tab.c
 H_PARSER=${TARGET}.tab.h
 
-all: ${TARGET}
+FILES=${C_PARSER} ${C_LEXER} table.c
 
-${C_PARSER} ${H_PARSER}: ${SRC_BISON}
+all:
 	bison -d ${SRC_BISON}
-
-${C_LEXER}: ${SRC_LEXER} ${H_PARSER}
 	flex ${SRC_LEXER}
-
-${TARGET}: ${C_LEXER} ${C_PARSER} ${H_PARSER}
-	${CC} -o ${TARGET}.out ${C_PARSER} ${C_LEXER}
+	${CC} ${XXFLAGS} -o ${TARGET}.out ${FILES}
 
 clean:
 	rm -f ${TARGET}.out ${C_PARSER} ${H_PARSER} ${C_LEXER} ${H_LEXER}
+	rm -f tok.log
