Scrap the last comit - hello mouse
Scrap the stated reimplementation of scope. Rather, I will make a toy
version of the rapidly convoluting Rat language. I am having difficulty
writting Rat because I am learning the craft while crafting something
huge. The result is a beastly mess.

Mouse is an extremely minimal version of Rat. There are two kinds of
statements, creation of compositions, and coupling of effects. Here is a
sample program:

```
composition A = h . g . f
effect h = foo
```

The output should be:

```
EMIT m1
EMIT m2
EMIT m3
PURE m1 h
PURE m2 g
PURE m3 f
LINK m1 m2
LINK m2 m3
EFCT m1 foo
```

Once this is working, I will extend it to support nested compositions
and groups, e.g.

```
composition A = (h . x . y) . B . f
composition B = a . x . y
effect A/x = foo
effect B/x = bar
effect A/B/x = baz
```

Then I will extend it to deal with multiple inputs, e.g. `a b . x`.

--- a/mouse/Makefile
+++ b/mouse/Makefile
@@ -1,19 +1,19 @@
-TARGET=scope
+TARGET=mouse
 CC=gcc
 XXFLAGS=-Wall
 
-SRC_BISON=parser.y
-SRC_LEXER=lexer.l
+SRC_BISON=${TARGET}.y
+SRC_LEXER=${TARGET}.l
 
 C_LEXER=lex.yy.c
 H_LEXER=lex.yy.h
 C_PARSER=${TARGET}.tab.c
 H_PARSER=${TARGET}.tab.h
 
-FILES=${C_PARSER} ${C_LEXER} table.c
+FILES=${C_PARSER} ${C_LEXER}
 
 all:
-	bison -d ${SRC_BISON}
+	bison -d --report=all -Wall ${SRC_BISON}
 	flex ${SRC_LEXER}
 	${CC} ${XXFLAGS} -o ${TARGET}.out ${FILES}
 
