--- a/mouse/Makefile
+++ b/mouse/Makefile
@@ -5,12 +5,14 @@ XXFLAGS=-Wall
 SRC_BISON=${TARGET}.y
 SRC_LEXER=${TARGET}.l
 
+
+
 C_LEXER=lex.yy.c
 H_LEXER=lex.yy.h
 C_PARSER=${TARGET}.tab.c
 H_PARSER=${TARGET}.tab.h
 
-FILES=${C_PARSER} ${C_LEXER}
+FILES=${C_PARSER} ${C_LEXER} path.c table.c
 
 all:
 	bison -d --report=all -Wall ${SRC_BISON}
@@ -19,4 +21,4 @@ all:
 
 clean:
 	rm -f ${TARGET}.out ${C_PARSER} ${H_PARSER} ${C_LEXER} ${H_LEXER}
-	rm -f tok.log
+	rm -f tok.log mouse.output
