Wired table into bison file (SEGFAULTS)
Running yyparse builds a table. This table, currently, is the sole
output of the parser. From it we can generate the RIL to build manifolds
and attach effects. However, it misses the connections between
manifolds, for this we will need either another data structure or a
major refactor existing ones ...

--- a/mouse/Makefile
+++ b/mouse/Makefile
@@ -12,7 +12,7 @@ H_LEXER=lex.yy.h
 C_PARSER=${TARGET}.tab.c
 H_PARSER=${TARGET}.tab.h
 
-FILES=${C_PARSER} ${C_LEXER} path.c table.c
+FILES=${C_PARSER} ${C_LEXER} path.c table.c effect.c manifold.c
 
 all:
 	bison -d --report=all -Wall ${SRC_BISON}
